fix z-index & background issue

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1172,6 +1172,7 @@ opacity: .9;
 	position: fixed;
 	right: 15px;
 	top:100px;
+	z-index: 1020;
 }
 .vertical-dots-nav ul li{
 	display: block;
